--- a/src/app/app-youtube-player/app-youtube-player.component.html
+++ b/src/app/app-youtube-player/app-youtube-player.component.html
@@ -4,6 +4,7 @@
                     suggestedQuality="highres"
                     [width]="width" 
                     [height]="height"
+                    (ready)="onPlayerReady($event)"
                     >
     </youtube-player>
     <div class="youtubefooter"></div>
