--- a/src/app/app-youtube-player/app-youtube-player.component.css
+++ b/src/app/app-youtube-player/app-youtube-player.component.css
@@ -10,3 +10,16 @@
     width: 100%; 
     height: 100%;
 }
+#ytplayer {
+    /* Style for your YouTube player */
+    /* For example: */
+    /*width: 640px;*/
+    /*height: 360px;*/
+  }
+  
+  .buttons {
+    position: absolute;
+    top: 0;
+    right: 640; /* or left: 0; to position on the left side */
+    /* Adjust top, right, left, or other styles as needed */
+  }
