Pending changes exported from your codespace

--- a/src/app/app-youtube-player/app-youtube-player.component.html
+++ b/src/app/app-youtube-player/app-youtube-player.component.html
@@ -1,11 +1,11 @@
-<div class="youtubewrap" >
-    <youtube-player id="ytplayer" [videoId] = "videoId"
+<div class="youtubewrap">
+    <youtube-player  id="ytplayer" 
                                 [playerVars]="playerVars"
                                 suggestedQuality="highres"
                                 [width]="YTwidth" 
                                 [height]="YTheight"
-                                (ready)="onPlayerReady($event)"
-                    >
+                                [videoId]="videoId"
+                                (ready)="onPlayerReady($event)">
     </youtube-player>
     <div class="youtubefooter"></div>
 </div>
