--- a/src/app/app-youtube-player/app-youtube-player.component.html
+++ b/src/app/app-youtube-player/app-youtube-player.component.html
@@ -10,5 +10,7 @@
     <div class="youtubefooter"></div>
 </div>
 <div class="buttons">
-  <button id="togglemute" (click)="toggleMuteVideo()">Mute/unMute</button>
+    <button id="togglemute" (click)="toggleMuteVideo()">
+        Mute/unMute
+    </button>
 </div>
