--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         <!-- Show this when isLoading is true -->
         <p>Please wait while Page is loading...</p>
         <h1 style="font-size:3vw; top:0px; color: red; text-align: center;">BRING THEM HOME</h1>
-         <div class="impotedhtml" style="border: 20px solid red;width: 90vw;height: 75vh;box-sizing: border-box;"> 
+         <div class="impotedhtml"> 
         <div [innerHTML]="documentHtmlContent"></div>
         </div>
     </div>
